code cleanup (preparing for release)